[package]
name = "primitives"
version = "0.1.0"
authors = ["kayryu <lukayryu@gmail.com>"]
# edition = "2018"

[dependencies]
tiny-keccak = "1.4"
crunchy = { version = "0.2.1", default-features = false }
fixed-hash = { version = "0.3", default_features = false }
serde = { version = "1.0", optional = true }
uint = { version = "0.5", default_features = false }

[dev-dependencies]
serde_json = "1.0"
hex-literal = "0.1.2"
rand = { version = "0.4" }
rustc-hex = "1.0"

[features]
default = ["std", "heapsize", "serialize", "byteorder", "fixed-hash/rustc-hex", "fixed-hash/libc"]
std = ["uint/std", "fixed-hash/std", "crunchy/std"]
heapsize = ["uint/heapsize", "fixed-hash/heapsize"]
serialize = ["std", "serde"]
byteorder = ["fixed-hash/byteorder"]
