[package]
name = "no-std-tests"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tests for no-std environments"
license = "MIT"

[dependencies]
libc = { version = "0.2", default-features = false }
primitives = { path = "..", default-features = false }
fixed-hash = { version = "0.3", default-features = false }

[features]
default = ["byteorder"]
byteorder = ["primitives/byteorder"]
